--- a/src/custom.css
+++ b/src/custom.css
@@ -1,10 +1,10 @@
-html,
-body {
+html,body {
   height: 100%;
 }
 
 body {
-  display: flex;
-  align-items: center;
+  display: flex; /*Flex é flex ne */
+  align-items: center; /* alinha vertical */
+  justify-content: center; /* alinha horizontal */ 
   background-color: #Fff;
 }
